--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,3 +5,17 @@
     background-attachment: fixed;
     background-size: cover;
 }
+
+.form-control-borderless {
+    border: none;
+}
+
+.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+.titulo{
+    color: gold;
+    background-color: rgba(85, 85, 85, 0.62)!important;
+}
