--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,18 @@
     background-attachment: fixed;
     background-size: cover;
 }
+.left{
+    float: left;
+}
+
+.center{
+    text-align: center;
+}
+
+.right{
+    float: right;
+}
+
 
 .form-control-borderless {
     border: none;
@@ -53,6 +65,7 @@
 
 .imagem-perfil-personagem{
     width: 40%;
+    padding-top: 5px;
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -83,6 +96,7 @@
 }
 .row-cards{
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 .personagem-detalhes-card-dubladores{
     height: 350px;
@@ -99,4 +113,73 @@
     width: 500px;
     vertical-align: middle;
     text-align: center;
+}
+.div-estatisticas-anime{
+    font-size: 15px;
+    display: table-cell;
+    vertical-align: top;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.div-informacao-anime{
+    font-size: 15px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.row-anime-detalhes{
+    font-size: 15px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+}
+
+.imagem-perfil-anime{
+    width: 30%;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+    text-align: center;
+}
+.info-cell{
+    width: 95%;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rgba(214, 214, 214, 0.2);
+    margin: 0 38px 15px 30px;
+    display: table;
+    border: solid 1px rgba(154, 154, 154, 0.31);
+}
+.info-cell-row{
+    display: table-cell;
+    vertical-align: middle;
+}
+.text-score{
+    font-size: 22px;
+    font-weight: 900;
+    text-align: center;
+}
+.text-users{
+    font-size: 10px;
+    font-weight: 400;
+    text-align: center;
+}
+.card-dubladores{
+    display: table;
+    width: 300px;
+    margin-bottom: 30px;
+}
+.img-dubladores-card{
+    width: 30px;
+    height: auto;
+}
+.card-espacamento{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.img-dubladores-text{
+
 }
